Registration and shit

--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -28,3 +28,11 @@
 [prune]
   go-tests = true
   unused-packages = true
+
+[[constraint]]
+  name = "github.com/gorilla/mux"
+  version = "1.6.2"
+
+[[constraint]]
+  name = "github.com/gorilla/csrf"
+  version = "1.5.1"
