--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -44,3 +44,7 @@
 [[constraint]]
   name = "github.com/mongodb/mongo-go-driver"
   version = "0.2.0"
+
+[[constraint]]
+  branch = "master"
+  name = "golang.org/x/crypto"
